[gd_scene load_steps=20 format=2]

[ext_resource path="res://gui/Inventory.gd" type="Script" id=1]
[ext_resource path="res://textures/ui/panel_bg.png" type="Texture" id=2]
[ext_resource path="res://textures/ui/button.png" type="Texture" id=3]
[ext_resource path="res://textures/icons/arrows.png" type="Texture" id=4]
[ext_resource path="res://textures/icons/material.png" type="Texture" id=5]
[ext_resource path="res://textures/icons/tool.png" type="Texture" id=6]
[ext_resource path="res://textures/icons/necklace.png" type="Texture" id=7]
[ext_resource path="res://textures/icons/potion.png" type="Texture" id=8]
[ext_resource path="res://textures/icons/sword.png" type="Texture" id=9]
[ext_resource path="res://textures/icons/armor.png" type="Texture" id=10]
[ext_resource path="res://textures/icons/inventory.png" type="Texture" id=11]
[ext_resource path="res://textures/ui/button_round.png" type="Texture" id=12]
[ext_resource path="res://textures/icons/close.png" type="Texture" id=13]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 766, 203 )
margin_left = 36.0
margin_right = 36.0
margin_top = 36.0
margin_bottom = 36.0

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 506, 55 )
margin_left = 6.0
margin_right = 6.0
margin_top = 6.0
margin_bottom = 6.0

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 67, 67 )

[node name="Inventory" type="PanelContainer"]
margin_left = -3448.0
margin_top = -236.0
margin_right = -3148.0
margin_bottom = 64.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 300.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 300.0
margin_bottom = 300.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 290.0
custom_constants/separation = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 30.0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 280.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 280.0
margin_bottom = 30.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="SlotSelector" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 260.0
margin_bottom = 25.0
mouse_filter = 2
alignment = 1

[node name="Inventory" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/SlotSelector"]
margin_right = 24.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 11 )
flat = true
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/SlotSelector"]
margin_left = 28.0
margin_right = 38.0
margin_bottom = 20.0
custom_styles/separator = SubResource( 9 )
custom_constants/separation = 10

[node name="Weapon" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/SlotSelector"]
margin_left = 42.0
margin_right = 67.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 9 )
flat = true
expand_icon = true

[node name="Armor" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/SlotSelector"]
margin_left = 71.0
margin_right = 96.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 10 )
flat = true
expand_icon = true

[node name="Jewelry" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/SlotSelector"]
margin_left = 100.0
margin_right = 125.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="Ammunition" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/SlotSelector"]
margin_left = 129.0
margin_right = 153.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="Consumable" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/SlotSelector"]
margin_left = 157.0
margin_right = 182.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 8 )
flat = true
expand_icon = true

[node name="Tool" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/SlotSelector"]
margin_left = 186.0
margin_right = 211.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="Material" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/SlotSelector"]
margin_left = 215.0
margin_right = 240.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 280.0
margin_bottom = 35.0
scroll_horizontal_enabled = false

[node name="grid" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
mouse_filter = 2
columns = 7

[node name="Close" type="Button" parent="."]
margin_left = 280.0
margin_right = 300.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 8
size_flags_vertical = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Close"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="sort_children" from="." to="." method="_on_Inventory_sort_children"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
